# MatrixOS

./: CMakeLists.txt
.github/workflows/: buildForMystrix.yml
Applications/: CMakeLists.txt
Applications/BrightnessControl/: BrightnessControl.cpp  BrightnessControl.h
Applications/CustomControlMap/: CMakeLists.txt
Applications/Influence/: CMakeLists.txt  Influence.cpp  Influence.h
Applications/Sequencer/: Sequence.cpp
Devices/MatrixESP32/Applications/ForceCalibration/: HighCalibration.cpp
Devices/MatrixWeb/: ApplicationList.txt  CMakeLists.txt  Config.cmake  Device.cpp  Family.h  MatrixOSConfig.h  family.mk
Devices/Mystrix1/: ApplicationList.txt
Devices/Mystrix2/: ApplicationList.txt
Devices/MystrixSIL/: ApplicationList.txt  CMakeLists.txt  Device.cpp  Family.h  HostStub.cpp  MatrixOSConfig.h
Devices/MystrixSIL/web-ui/: index.html
Devices/MystrixSIL/web-ui/public/: MatrixOSHost.js
Devices/MystrixSIL/web-ui/src/: App.svelte  app.css
Devices/MystrixSim/: ApplicationList.txt
OS/: MatrixOS.h
OS/FileSystem/: CMakeLists.txt  File.h  FileSystemStub.cpp
OS/Framework/: Framework.h
OS/Framework/Color/: ColorEffects.cpp
OS/Framework/KeyEvent/: KeyInfo.cpp
OS/Framework/Utils/: MathConstants.h
OS/HID/: HID.h
OS/USB/: CMakeLists.txt
OS/USB/TinyUSB/: tusb.h  tusb_stub.cpp  tusb_stub.h
devices/MatrixBlock6/: Applications.h
devices/MatrixBlock6/Variants/: CMakeLists.txt
web-ui/: index.html  package-lock.json
web-ui/public/: MatrixOSHost.js  MatrixOSHost.wasm
web-ui/src/: App.svelte  app.css
